# bittorrent-client

./: Cargo.toml  README.md  writeup.md
src/: client.rs  download.rs  error.rs  lib.rs  main.rs  message.rs  peer.rs  piece.rs  term.rs  torrent.rs  tracker.rs  utils.rs
src/tests/: torrent_test.rs
src/tests/common/: mod.rs
src/tests/data/: debian.torrent  test.torrent
