[package]
name = "bittorrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
rand = "0.8.5"
bytes = "1.3.0"
clap = { version = "4.0.32", features = ["derive"] }
hex = "0.4.3"
regex = "1"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_bencode = "0.2.3"
serde_bytes = "0.11.12"
serde_json = "1.0.105"
serde_urlencoded = "0.7.1"
sha1 = "0.10.6"
tempfile = "3"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["full"] }
futures-core = "0.3"
futures-sink = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
kanal = "0.1.0-pre8"
url = "2.5.4"
urlencoding = "2.1.3"
percent-encoding = "2.3.1"
crossterm = "0.28.1"
chrono = "0.4.39"
ctrlc = "3.4.5"
